--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -76,10 +76,6 @@
 
 /* GRID STYLING */
 
-.eachitem {
-    background-color: #C7D3D4FF;
-}
-
 * {
     box-sizing: border-box;
 }
@@ -131,4 +127,78 @@ body {
     width: 100%;
     height: 100%;
     background-color: #1d2630;
+}
+
+.eachitem {
+    background-color: #cc8c8c;
+}
+
+/* ------------------------ */
+
+@import url('https://fonts.googleapis.com/css?family=Codystar:300&display=swap');
+
+body {
+    /* min-height: 100vh; */
+    background-color: black;
+    background-image: url('data:image/svg+xml,%3Csvg width="42" height="44" viewBox="0 0 42 44" xmlns="http://www.w3.org/2000/svg"%3E%3Cg id="Page-1" fill="none" fill-rule="evenodd"%3E%3Cg id="brick-wall" fill="%239C92AC" fill-opacity="0.4"%3E%3Cpath d="M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z"/%3E%3C/g%3E%3C/g%3E%3C/svg%3E');
+}
+
+.neons {
+    margin-top: 10rem;
+    text-align: center;
+}
+
+.neons h1 {
+    font-size: 20vh;
+    text-align: center;
+    font-weight: bold;
+    -webkit-animation: glow 2s ease-in-out infinite alternate;
+    -moz-animation: glow 2s ease-in-out infinite alternate;
+    animation: glow 2s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+    from {
+        color: #fff;
+        text-shadow: 0 0 10px #00fff2, 0 0 20px #00fff2, 0 0 30px #00fff2, 0 0 40px #00fff2, 0 0 50px #00fff2, 0 0 60px #00fff2, 0 0 70px #00fff2, 0 0 90px #00fff2;
+    }
+
+    to {
+        color: gray;
+        text-shadow: 0 0 20px #00fff2, 0 0 30px #00fff2, 0 0 40px #00fff2, 0 0 50px #00fff2, 0 0 60px #00fff2, 0 0 70px #00fff2, 0 0 80px #00fff2, 0 1 90px #00fff2;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .neons h1 {
+        font-size: 17vh;
+    }
+
+}
+
+/* text resizing for animated text  */
+
+@media screen and (max-width: 950px) {
+    .neons h1 {
+        font-size: 16vh;
+    }
+}
+
+
+@media screen and (max-width: 650px) {
+    .neons h1 {
+        font-size: 13vh;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .neons h1 {
+        font-size: 7vh;
+    }
+}
+
+@media screen and (max-width: 240px) {
+    .neons h1 {
+        font-size: 4vh;
+    }
 }
